@@ -25,8 +25,6 @@
  *  SUCH DAMAGE.
  *
  *
- *  $Id: cpu_sh_instr.c,v 1.64.2.1 2008-01-18 19:12:26 debug Exp $
- *
  *  SH instructions.
  *
  *  Individual functions should keep track of cpu->n_translated_instrs.
@@ -2348,6 +2346,39 @@ X(fsca_fpul_drn)
 
 
 /*
+ *  fipr_fvm_fvn:  Vector * vector  =>  vector
+ *
+ *  arg[0] = ptr to FVm
+ *  arg[1] = ptr to FVn
+ *
+ *  Result of adding all   FR{m+i} * FR{n+i}  where i=0..3
+ *  is stored in FR{n+3}.
+ */
+X(fipr_fvm_fvn)
+{
+	struct ieee_float_value frn0, frn1, frn2, frn3;
+	struct ieee_float_value frm0, frm1, frm2, frm3;
+
+	FLOATING_POINT_AVAILABLE_CHECK;
+
+	ieee_interpret_float_value(reg(ic->arg[0] + 0), &frm0, IEEE_FMT_S);
+	ieee_interpret_float_value(reg(ic->arg[0] + 4), &frm1, IEEE_FMT_S);
+	ieee_interpret_float_value(reg(ic->arg[0] + 8), &frm2, IEEE_FMT_S);
+	ieee_interpret_float_value(reg(ic->arg[0] + 12), &frm3, IEEE_FMT_S);
+	ieee_interpret_float_value(reg(ic->arg[1] + 0), &frn0, IEEE_FMT_S);
+	ieee_interpret_float_value(reg(ic->arg[1] + 4), &frn1, IEEE_FMT_S);
+	ieee_interpret_float_value(reg(ic->arg[1] + 8), &frn2, IEEE_FMT_S);
+	ieee_interpret_float_value(reg(ic->arg[1] + 12), &frn3, IEEE_FMT_S);
+
+	frn3.f =
+	    frm0.f * frn0.f + frm1.f * frn1.f +
+	    frm2.f * frn2.f + frm3.f * frn3.f;
+
+	reg(ic->arg[1] + 12) = ieee_store_float_value(frn3.f, IEEE_FMT_S, 0);
+}
+
+
+/*
  *  ftrv_xmtrx_fvn:  Matrix * vector  ==>  vector
  *
  *  arg[0] = ptr to FVn
@@ -3892,6 +3923,11 @@ X(to_be_translated)
 			/*  FCNVDS DRm,FPUL  */
 			ic->f = instr(fcnvds_drm_fpul);
 			ic->arg[0] = (size_t)&cpu->cd.sh.fr[r8];
+		} else if (lo8 == 0xed) {
+			/*  FIPR FVm,FVn  */
+			ic->f = instr(fipr_fvm_fvn);
+			ic->arg[0] = (size_t)&cpu->cd.sh.fr[r8 & 0xc];  /* m */
+			ic->arg[1] = (size_t)&cpu->cd.sh.fr[(r8&3)*4];  /* n */
 		} else if ((iword & 0x01ff) == 0x00fd) {
 			/*  FSCA FPUL,DRn  */
 			ic->f = instr(fsca_fpul_drn);
